--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
